Finished Interval and Context Menu

--- a/Class2_Startup/App.config
+++ b/Class2_Startup/App.config
@@ -13,6 +13,12 @@
             <setting name="PanelColor" serializeAs="String">
                 <value>White</value>
             </setting>
+            <setting name="GridColor" serializeAs="String">
+                <value>Black</value>
+            </setting>
+            <setting name="CellColor" serializeAs="String">
+                <value>Silver</value>
+            </setting>
         </Class2_Startup.Properties.Settings>
     </userSettings>
 </configuration>
